chore: mentor mock data now gets loaded as expected